fix: [CI-1550] BuildInfraSpec UI aligning  (#2935)
* fix: refactor BuildInfraSpec UI

* fix: set font to undefined not to break step tests

* fix: removed tooltips again as they gonna be added later

--- a/src/modules/10-common/components/MultiTypeMap/MultiTypeMap.module.scss
+++ b/src/modules/10-common/components/MultiTypeMap/MultiTypeMap.module.scss
@@ -1,6 +1,19 @@
 .group {
   display: flex;
-
+  &.minimalCard {
+    :global {
+      .bp3-card {
+        border: none;
+        background: transparent;
+        box-shadow: none;
+        border-radius: 0;
+        padding: var(--spacing-small) 0;
+        .bp3-button[data-testid*='add'] {
+          padding: 5px 0;
+        }
+      }
+    }
+  }
   &:not(:first-child):not(.without-spacing) {
     margin-top: var(--spacing-medium);
   }
