--- a/src/modules/75-ci/components/PipelineStudio/BuildInfraSpecifications/BuildInfraSpecifications.module.scss
+++ b/src/modules/75-ci/components/PipelineStudio/BuildInfraSpecifications/BuildInfraSpecifications.module.scss
@@ -150,6 +150,8 @@
 
 .plainList {
   padding: 0;
+  margin-top: var(--spacing-xsmall);
+  margin-bottom: var(--spacing-medium);
   list-style: none;
   li + li {
     margin-top: var(--spacing-xsmall);
